service endpoint tests and stream tests